--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="YES Startup Incubator" />
+    <meta name="description" content="YES - Startups at Yale" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
